buttons styling, made it look better, got js functionality to work on a button lol

--- a/main.html
+++ b/main.html
@@ -9,66 +9,33 @@
   <body>
     <div class="container">
       <div id="menu">this is the menu</div>
+
       <div class="numbers">
-        <div class="buttons-container">
-          <button type="button" id="1">1</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="2">2</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="3">3</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="4">4</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="5">5</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="6">6</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="7">7</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="8">8</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="9">9</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="0">0</button>
-        </div>
+        <button type="button" id="one">1</button>
+        <button type="button" id="two">2</button>
+        <button type="button" id="three">3</button>
+        <button type="button" id="four">4</button>
+        <button type="button" id="five">5</button>
+        <button type="button" id="six">6</button>
+        <button type="button" id="seven">7</button>
+        <button type="button" id="eight">8</button>
+        <button type="button" id="nine">9</button>
+        <button type="button" id="xero">0</button>
+        <button type="button" id="equals">=</button>
       </div>
 
       <div class="operations-container">
-        <div class="buttons-container">
-          <button type="button" id="+">+</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="-">-</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="*">*</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="/">/</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="=">=</button>
-        </div>
-      </div>
-
-      <div class="clear-back-container">
-        <div class="buttons-container">
-          <button type="button" id="clear">CLEAR</button>
-        </div>
-        <div class="buttons-container">
-          <button type="button" id="backspace">BACK</button>
-        </div>
-      </div>
+        <button type="button" id="+">+</button>
+        <button type="button" id="-">-</button>
+        <button type="button" id="*">*</button>
+        <button type="button" id="/">/</button>
     </div>
+    
+    <div class="clear-back-container">
+        <button type="button" id="backspace">BACK</button>
+        <button type="button" id="clear">CLEAR</button>
+    </div>
+    
     <script src="main.js"></script>
   </body>
 </html>
