--- a/main.html
+++ b/main.html
@@ -13,31 +13,33 @@
 
     <div id="menu">this is the menu</div>
 
-    <div class="numbers">
-      <button type="button" id="one" class="main-buttons">1</button>
-      <button type="button" id="two" class="main-buttons">2</button>
-      <button type="button" id="three" class="main-buttons">3</button>
-      <button type="button" id="four" class="main-buttons">4</button>
-      <button type="button" id="five" class="main-buttons">5</button>
-      <button type="button" id="six" class="main-buttons">6</button>
-      <button type="button" id="seven" class="main-buttons">7</button>
-      <button type="button" id="eight" class="main-buttons">8</button>
-      <button type="button" id="nine" class="main-buttons">9</button>
-      <button type="button" id="xero" class="main-buttons">0</button>
-      <button type="button" id="equals" class="main-buttons">=</button>
-    </div>
+    <div class="buttons">
+        <div class="numbers">
+        <button type="button" id="one" class="main-buttons">1</button>
+        <button type="button" id="two" class="main-buttons">2</button>
+        <button type="button" id="three" class="main-buttons">3</button>
+        <button type="button" id="four" class="main-buttons">4</button>
+        <button type="button" id="five" class="main-buttons">5</button>
+        <button type="button" id="six" class="main-buttons">6</button>
+        <button type="button" id="seven" class="main-buttons">7</button>
+        <button type="button" id="eight" class="main-buttons">8</button>
+        <button type="button" id="nine" class="main-buttons">9</button>
+        <button type="button" id="zero" class="main-buttons">0</button>
+        <button type="button" id="equals" class="main-buttons">=</button>
+        </div>
 
-    <div class="operations-container">
-      <button type="button" id="+">+</button>
-      <button type="button" id="-">-</button>
-      <button type="button" id="*">*</button>
-      <button type="button" id="/">/</button>
-    </div>
+        <div class="operations-container">
+        <button type="button" id="+" class="operation-button">+</button>
+        <button type="button" id="-" class="operation-button">-</button>
+        <button type="button" id="*" class="operation-button">*</button>
+        <button type="button" id="/" class="operation-button">/</button>
+        </div>
 
-    <div class="clear-back-container">
-      <button type="button" id="backspace">BACK</button>
-      <button type="button" id="clear">CLEAR</button>
-    </div>
+        <div class="clear-back-container">
+        <button type="button" id="backspace">BACK</button>
+        <button type="button" id="clear">CLEAR</button>
+        </div>
+</div>
 
     <script src="main.js"></script>
 </body>
