simple calculator done. May come back to make it look better. Its ok for now.

--- a/main.html
+++ b/main.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.cdnfonts.com/css/mrk-maston" rel="stylesheet">
 </head>
 
 <body>
   <div class="container">
-
-    <div id="menu">this is the menu</div>
+    <input type="text" id="menu"/>
 
     <div class="buttons">
         <div class="numbers">
@@ -25,7 +25,7 @@
         <button type="button" id="eight" class="main-buttons">8</button>
         <button type="button" id="nine" class="main-buttons">9</button>
         <button type="button" id="zero" class="main-buttons">0</button>
-        <button type="button" id="equals" class="main-buttons">=</button>
+        <button type="button" id="equals" class="operation-button">=</button>
         </div>
 
         <div class="operations-container">
